--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -9,53 +9,130 @@
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Tab 2</ion-title>
+      <ion-title size="large">Hoja de Vida </ion-title>
     </ion-toolbar>
   </ion-header>
 
-  <ion-grid>
-    <ion-row>
-      <ion-card>
-        <ion-card-header>
-          <ion-avatar>
-            <img alt="Silhouette of a person's head" src="https://ionicframework.com/docs/img/demos/avatar.svg" />
-          </ion-avatar>
-          <ion-card-title>Cristian Simba</ion-card-title>
-          <ion-card-subtitle>Desarrollador de software</ion-card-subtitle>
-        </ion-card-header>
+  <ion-list>
+    <ion-item>
+      <img alt="Foto de perfil" src="../../assets/cv_img.jpg" style="width: 40%; height: auto; border-radius: 100%; margin-right: 20px; margin-bottom: 10px;" />
+      <ion-label>
+        <h1>Cristian Simba</h1>
+        <h3>Desarrollador de software</h3>
+      </ion-label>
+    </ion-item>
+
+    <ion-item>
+      <ion-label >
+        <h1 style="padding-top: 20px;">Perfil Profesional</h1>
+        <p>Me distingo por ser perseverante, respetuoso y responsable. Mi enfoque en la
+          generación de ideas y trabajo en equipo impulsa mi crecimiento personal y profesional.</p>
+      </ion-label>
+    </ion-item>
+    <ion-item>
+      <ion-label>
+        <h1 style="padding-top: 10px;">Formación académica</h1>
+        <h2>Escuela Politécnica Nacional || 2024</h2>
+        <p><em>Tecnólogo Superior en Desarrollo de Software</em></p>
+        <h2 style="padding-top: 10px;">Unidad Educativa Gran Colombia || 2020</h2>
+        <p><em>Bachiller Técnico en Organización y Gestión del
+          Secretariado</em></p>
+      </ion-label>
+    </ion-item>
+
+    <ion-item>
+      <ion-label>
+        <h1 style="padding-top: 10px;">Conocimientos</h1>
+        <p>Mis conocimientos se basan en diferentes lenguajes de programación como en bases datos.</p>
+        <ion-accordion-group style="padding-top: 10px;">
+          <ion-accordion value="first">
+            <ion-item slot="header" color="light">
+              <ion-label>Tecnologias</ion-label>
+            </ion-item>
+            <div class="ion-padding" slot="content" style="display: flex; align-items: center;">
+              <ion-icon name="logo-react" color="primary"  style="margin-right: 8px;"></ion-icon>
+                React
+            </div>
+            <div class="ion-padding" slot="content" style="display: flex; align-items: center;">
+              <ion-icon name="logo-nodejs" color="success" style="margin-right: 8px;"></ion-icon>
+              NodeJs
+            </div>
+            <div class="ion-padding" slot="content" style="display: flex; align-items: center;">
+              <ion-icon name="logo-javascript" color="warning"  style="margin-right: 8px;"></ion-icon>
+              JavaScript
+            </div>  
+            <div class="ion-padding" slot="content" style="display: flex; align-items: center;">
+              <ion-icon name="logo-python"  style="margin-right: 8px;"></ion-icon>
+              Python
+            </div>  
+
+          </ion-accordion>
+        </ion-accordion-group>
+        <ion-accordion-group style="padding-top: 10px;">
+          <ion-accordion value="first">
+            <ion-item slot="header" color="light">
+              <ion-label>Bases de datos</ion-label>
+            </ion-item>
+            <div class="ion-padding" slot="content" style="display: flex; align-items: center;">
+              <img src="https://www.vectorlogo.zone/logos/mysql/mysql-icon.svg" style="width: 20px; height: 20px; margin-right: 10px;" />
+                MySQL
+            </div>  
+            <div class="ion-padding" slot="content" style="display: flex; align-items: center;">
+              <img src="https://www.svgrepo.com/show/374093/sql.svg" style="width: 20px; height: 20px; margin-right: 10px;" />
+                SQL Server
+            </div>  
+            <div class="ion-padding" slot="content" style="display: flex; align-items: center;">
+              <img src="https://www.svgrepo.com/show/373845/mongo.svg" style="width: 20px; height: 20px; margin-right: 10px;" />
+                MongoDB
+            </div>  
+
+          </ion-accordion>
+        </ion-accordion-group>
+      </ion-label>
+
       
-        <ion-card-content>
-          Estudiante de desarrollo de software con conocimientos en backend y frontend
-        </ion-card-content>
-      </ion-card>
+    </ion-item>
 
-      <ion-card>
-        <ion-card-header>
-          <ion-card-title>Conocimientos</ion-card-title>
-          <ion-card-subtitle>Tecnologías</ion-card-subtitle>
-        </ion-card-header>
-      
-        <ion-card-content>
-          Here's a small text description for the card content. Nothing more, nothing less.
-          <ion-list lines="full">
-            <ion-item>
-              <ion-label>React</ion-label>
-            </ion-item>
-            <ion-item>
-              <ion-label>NodeJs</ion-label>
-            </ion-item>
-            <ion-item>
-              <ion-label>MongoDb</ion-label>
-            </ion-item>
-          </ion-list>
-        </ion-card-content>
-      </ion-card>
-
-    </ion-row>
-  </ion-grid>
-
-
-
+    <ion-item>
+      <ion-label>
+        <h1 style="padding-top: 10px;">Idiomas</h1>
+        <ion-list>
+          <ion-item>
+            <ion-label>Español - Nativo</ion-label>
+          </ion-item>
+          <ion-item>
+            <ion-label>Inglés - Intermedio</ion-label>
+          </ion-item>
+        </ion-list>
+      </ion-label>
+    </ion-item>
+    <ion-item>
+      <ion-label>
+        <h1 style="padding-top: 10px;">Contacto</h1>
+        
+        <div style="display: flex; align-items: center; gap: 8px; padding-top: 10px;">
+          <ion-icon name="logo-linkedin" color="primary"></ion-icon>
+          <p>Cristian Simba</p>
+        </div>
+        <div style="display: flex; align-items: center; gap: 8px;">
+          <ion-icon name="logo-github"></ion-icon>
+          <p>cristian-simba</p>
+        </div>
+        <div style="display: flex; align-items: center; gap: 8px;">
+          <ion-icon name="call-outline"></ion-icon>
+          <p>0979467201</p>
+        </div>
+        <div style="display: flex; align-items: center; gap: 8px;">
+          <ion-icon name="mail-unread-outline"></ion-icon>
+          <p>davidsimba200gmail.com</p>
+        </div>
+        <div style="display: flex; align-items: center; gap: 8px;">
+          <ion-icon name="location-outline"></ion-icon>
+          <p>Quito - Ecuador</p>
+        </div>
+      </ion-label>
+    </ion-item>
+  </ion-list>
 
   <app-explore-container name="Tab 2 page"></app-explore-container>
 </ion-content>
